--- a/main.html
+++ b/main.html
@@ -9,6 +9,35 @@
 <body>
 	
 	<!-- the entire body must be written by student -->
+		<header>
+			<h1>Shaw's News</h1>
+		</header>
+		<div class="container">
+			<div class="latest-news div1">
+				<h3>Latest News Articles</h3>
+				<ul>
+					<li>Article 1</li>
+					<li>Article 2</li>
+					<li>Article 3</li>
+				</ul>
+				
+			</div>
+			<div class="main-article div1">
+				<h2>Main Article</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+					sed do eiusmod tempor incididunt ut labore et dolore 
+					magna aliqua. Ut enim ad minim veniam,quis nostrud exercitation 
+					ullamco laboris nisi ut aliquip ex ea commodo consequat.
+				</p>
+			</div>
+			
+			<div class="image div1">
+				<h3>Pictorial News</h3>
+				<img src="https://images.hindustantimes.com/img/2023/01/29/550x309/delhi_rains_1674974112847_1674981888135_1674981888135.jpeg" alt="img1">
+				<img src="https://images.hindustantimes.com/img/2023/01/29/550x309/ADANI-INDIA-GAUTAM-ADANI-0_1675011651023_1675011651023_1675011672003_1675011672003.JPG" alt="img2">
+				<img src="https://images.hindustantimes.com/img/2023/01/29/550x309/FRANCE-REFORM-PENSIONS-31_1675022359706_1675022359706_1675022383851_1675022383851.JPG" alt="img3">
+			</div>
+		</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
